refactoring reports system