@@ -1,19 +1,13 @@
 package com.neshan.routingreporter.service;
 
+import com.neshan.routingreporter.component.ReportFactory;
+import com.neshan.routingreporter.dto.ReportDto;
 import com.neshan.routingreporter.dto.RouteDto;
-import com.neshan.routingreporter.dto.RouteReportsDto;
-import com.neshan.routingreporter.enums.ReportType;
-import com.neshan.routingreporter.mapper.AccidentReportMapper;
-import com.neshan.routingreporter.mapper.PoliceReportMapper;
 import com.neshan.routingreporter.mapper.RouteMapper;
-import com.neshan.routingreporter.mapper.TrafficReportMapper;
 import com.neshan.routingreporter.model.Route;
-import com.neshan.routingreporter.model.TrafficReport;
 import com.neshan.routingreporter.model.User;
-import com.neshan.routingreporter.repository.AccidentReportRepository;
-import com.neshan.routingreporter.repository.PoliceReportRepository;
+import com.neshan.routingreporter.repository.ReportRepository;
 import com.neshan.routingreporter.repository.RouteRepository;
-import com.neshan.routingreporter.repository.TrafficReportRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -30,28 +24,15 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class RouteService {
     RouteRepository routeRepository;
-    TrafficReportRepository trafficReportRepository;
-    AccidentReportRepository accidentReportRepository;
-    PoliceReportRepository policeReportRepository;
+    ReportRepository reportRepository;
 
-    public RouteReportsDto getAllReportAroundRoute(RouteDto routeDto) {
-        return RouteReportsDto.builder()
-                .traffic(trafficReportRepository.findReportsWithinRouteRadius(routeDto.getRoute())
-                        .stream()
-                        .map(TrafficReportMapper.INSTANCE::trafficReportToTrafficReportDto)
-                        .toList()
-                )
-                .accident(accidentReportRepository.findReportsWithinRouteRadius(routeDto.getRoute())
-                        .stream()
-                        .map(AccidentReportMapper.INSTANCE::accidentReportToAccidentReportDto)
-                        .toList()
-                )
-                .police(policeReportRepository.findReportsWithinRouteRadius(routeDto.getRoute())
-                        .stream()
-                        .map(PoliceReportMapper.INSTANCE::policeReportToPoliceReportDto)
-                        .toList()
-                )
-                .build();
+    public List<ReportDto> getAllReportAroundRoute(RouteDto routeDto) {
+        System.out.println(reportRepository.findReportsWithinRouteRadius(routeDto.getRoute()));
+        return reportRepository.findReportsWithinRouteRadius(routeDto.getRoute())
+                .stream()
+                .map(ReportFactory::mapToMapper)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
     }
 
     public RouteDto create(RouteDto routeDto) {
